# sfmath

./: .gitignore  CMakeLists.txt  CMatrix.cpp  CMatrix.h  CMatrix.hpp  CQuaternion.cpp  CQuaternion.h  CQuaternion.hpp  CSfmathMatrix.cpp  CSfmathMatrix.h  CSfmathQuaternion.cpp  CSfmathQuaternion.h  CSfmathTransform.cpp  CSfmathTransform.h  CSfmathVector2.cpp  CSfmathVector2.h  CSfmathVector3.cpp  CSfmathVector3.h  CSfmathVector4.cpp  CSfmathVector4.h  CTransform.cpp  CTransform.h  CVector2.hpp  CVector3.cpp  CVector3.h  CVector3.hpp  CVector4.cpp  CVector4.h  CVector4.hpp  Export.h  Maths.cpp  Maths.vcxproj  Maths.vcxproj.filters  SfmathVertices.h  Vertices.h  Vertices.hpp  maths.vcxproj  sfmath.vcxproj  sfmath.vcxproj.filters
examples/demo/demo/: demo.vcxproj  demo.vcxproj.filters
include/: CMatrix.hpp  CQuaternion.hpp  CVector2.hpp  CVector3.hpp  CVector4.hpp  VectorUtils.hpp
